# valkey-fuzzer

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: daily-fuzzer.yml  fuzzer-run.yml  test.yml
docs/: chaos-engine-design.md  cluster-orchestrator-design.md  fuzzer-engine-design.md  fuzzer-engine-usage.md
examples/: README.md  config.yaml  example_scenario.yaml  run_fuzzer.py  simple_failover.yaml
scripts/: cluster_orchestrator.py
src/: __init__.py  cli.py  interfaces.py  main.py  models.py
src/chaos_engine/: __init__.py  base.py  coordinator.py
src/cluster_orchestrator/: __init__.py  base.py  orchestrator.py
src/fuzzer_engine/: README.md  __init__.py  base.py  chaos_coordinator.py  cluster_coordinator.py  dsl_utils.py  error_handler.py  fuzzer_engine.py  operation_log_buffer.py  operation_orchestrator.py  parallel_executor.py  state_validator.py  state_validator_helpers.py  test_case_generator.py  test_logger.py
src/utils/: cluster_parser.py  cluster_utils.py  valkey_utils.py
src/valkey_client/: __init__.py  base.py  crc16_slot_table.py  crc16_slots.py  load_data.py
tests/: README.md  __init__.py  test_chaos.py  test_chaos_coordinator.py  test_chaos_determinism.py  test_chaos_engine.py  test_chaos_randomization.py  test_cli.py  test_cluster_coordinator.py  test_cluster_utils.py  test_error_handler.py  test_fuzzer_e2e.py  test_fuzzer_engine_integration.py  test_load_data.py  test_models.py  test_node_restart.py  test_operation_orchestrator.py  test_orchestrator.py  test_real_chaos_integration.py  test_scenario_config_immutability.py  test_state_validator.py  test_test_case_generator.py  test_test_logger.py  test_validation_timeout.py  test_zero_replica_validation_config.py
tests/valkey_client/: test_crc16_slots.py
